- Photologue now works with Python 3.
- Added a set of templates that work well with Twitter-Bootstrap, and used
  them for the 'example_project'.
- Fixed issue #64 (allow installation without installing Pillow).
- Optional use of CKEditor.
- Updated Polish translation.
- New translation for Slovak.
- Bugfix: allow viewing latest galleries/latest photos pages even if they 
  are empty.

2.6.1 (2013-05-19)
------------------

- Fixed broken packaging in release 2.6.

2.6 (2013-05-19)
----------------

Please note:

1. Photologue now relies on Pillow instead of PIL. The easiest way to upgrade is
to remove PIL completely, then install the new version of Photologue.
2. Photologue, in line with Django itself, has dropped support for Django 1.3.

List of changes:

- Switched from PIL to Pillow - hopefully this should make installation easier.
- Initial setup of data: removed plinit and replaced it with a South data migration.
- Added feature to allow extending the built-in templates (and documented it!).
- Allow editing of Photo added date (temp way of sorting photos).
- Added an example project to help people wanting to contribute to the project.
- Fixed buggy Travis CI script.
- fixed issue #52, transactions in migration
- fixed issue #51, uniqueness collisions in migration
- Accessing the root url (usually /photologue/ will now redirect you to the gallery list view.
- Photologue requires min. Django 1.4.
- Tidied a data validator on PhotoSizes.

2.5 (2012-12-13)
----------------

- added a sitemap.xml.
- added some templatetags.
- started using Sphinx for managing documentation.
- started using Transifex for managing translations.
- started using Travis CI.
- added 12 new translations and improved some of the existing translations.
- fixed issue #29 (quote URL of resized image properly).
- misc improvements to clarity of unit tests.
- added Django 1.4 timezone support.

2.4 (2012-08-13)
----------------

Please note:
